@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-30T08:13:22Z",
-  "count_outdated" : 410,
-  "uniques_outdated" : 26,
-  "count" : 425,
+  "timestamp" : "2022-06-30T16:13:23Z",
+  "count_outdated" : 416,
+  "uniques_outdated" : 27,
+  "count" : 427,
   "uniques" : 31,
   "views" : [
-    {
-      "timestamp": "2022-06-16T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 2, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-17T00:00:00Z",
       "count": 1,
