@@ -1,12 +1,7 @@
 {
-  "count": 15,
+  "count": 11,
   "uniques": 1,
   "views": [
-    {
-      "timestamp": "2022-06-16T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-17T00:00:00Z",
       "count": 1,
